@@ -1,3 +1,8 @@
+Tue Oct 16 15:12:26 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtk/gtkoptionmenu.c (gtk_option_menu_mnemonic_activate): add a
+	mnemonic_activate function to option menu.
+
 2001-10-15  Murray Cumming <murrayc@usa.net
 
 	* gtk/gtkinputdialog.c, gtk/gtktoolbar.c,  gtk/gtkwidget.c:
